css/stylesheet.css
body{
    display: flex;
    height:100%
}

header{
    display:grid;
    grid-template-rows:2fr 1fr;
}

h1 {
    display:flex;
    justify-content: center;
}

aside{
    flex-grow:1;
}

aside>h2 {
    display:flex;
    justify-content: center;
}

.main_container {
    flex-grow:4;
    display:grid
}

.navbar {
    display:flex;
    justify-content: end;
    gap: 0.5em;
}

.navbar > a {
    text-decoration:none;
}

.top_buttons {
    display: flex;
    justify-content: space-between;
}

.bottom_buttons {
    display: flex;
    justify-content: end;
    gap: 1em;
}

footer {
    display:grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
}

h3 {
    display:flex;
    grid-column:1/-1;
    justify-content:center
}

.globe{
    display:flex;
    justify-content: end;
}

